v/0.15.0/_sources/examples/index.rst.txt
:orphan:

Examples
========

This is a collection of examples in Earth2Studio that demonstrate various functionality
and commonly used workflows.

.. dropdown:: Running Examples
    :color: info
    :icon: rocket

    Earth2Studio examples can be downloaded as a notebook or runnable Python script.
    Each requires installation of different optional dependency groups or additional
    packages for the specific models used or post-processing steps.
    Use uv to auto install dependencies on execution:

    ``uv run <example_script>.py``

    If you are using a container or other type of environment, then pip installing will
    likely be needed.
    Look for the `uv inline metadata <https://docs.astral.sh/uv/guides/scripts/#declaring-script-dependencies>`_
    blocks of the form:

    .. code-block:: python

        # /// script
        # dependencies = [
        #   "earth2studio @ git+https://github.com/NVIDIA/earth2studio.git",
        #   "cartopy",
        # ]
        # ///

    Pip install these packages then execute the example with:

    ``python <example_script>.py``



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


Getting Started
---------------

Introductory examples demonstrating the core inference workflows in Earth2Studio.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic deterministic inference workflow.">

.. only:: html

  .. image:: /examples/01_getting_started/images/thumb/sphx_glr_01_deterministic_workflow_thumb.png
    :alt:

  :doc:`/examples/01_getting_started/01_deterministic_workflow`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running Deterministic Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic prognostic + diagnostic inference workflow.">

.. only:: html

  .. image:: /examples/01_getting_started/images/thumb/sphx_glr_02_diagnostic_workflow_thumb.png
    :alt:

  :doc:`/examples/01_getting_started/02_diagnostic_workflow`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running Diagnostic Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple ensemble inference workflow.">

.. only:: html

  .. image:: /examples/01_getting_started/images/thumb/sphx_glr_03_ensemble_workflow_thumb.png
    :alt:

  :doc:`/examples/01_getting_started/03_ensemble_workflow`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running Ensemble Inference</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Medium Range
------------

Examples focused on medium-range global weather forecasting, ensemble methods,
and post-processing workflows.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Intermediate ensemble inference using a custom perturbation method.">

.. only:: html

  .. image:: /examples/02_medium_range/images/thumb/sphx_glr_01_ensemble_workflow_extend_thumb.png
    :alt:

  :doc:`/examples/02_medium_range/01_ensemble_workflow_extend`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Single Variable Perturbation Method</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Adding model noise by using custom hooks.">

.. only:: html

  .. image:: /examples/02_medium_range/images/thumb/sphx_glr_02_model_perturbation_hook_thumb.png
    :alt:

  :doc:`/examples/02_medium_range/02_model_perturbation_hook`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Model Hook Injection: Perturbation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic multi-checkpoint Huge Ensembles (HENS) inference workflow.">

.. only:: html

  .. image:: /examples/02_medium_range/images/thumb/sphx_glr_03_huge_ensembles_thumb.png
    :alt:

  :doc:`/examples/02_medium_range/03_huge_ensembles`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Huge Ensembles (HENS) Checkpoints</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Temporal Interpolation inference using InterpModAFNO model.">

.. only:: html

  .. image:: /examples/02_medium_range/images/thumb/sphx_glr_04_temporal_interpolation_thumb.png
    :alt:

  :doc:`/examples/02_medium_range/04_temporal_interpolation`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Temporal Interpolation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Tropical cyclone tracking with tracker diagnostic models.">

.. only:: html

  .. image:: /examples/02_medium_range/images/thumb/sphx_glr_05_cyclone_tracking_thumb.png
    :alt:

  :doc:`/examples/02_medium_range/05_cyclone_tracking`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tropical Cyclone Tracking</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Downscaling
-----------

Examples demonstrating generative and ensemble downscaling workflows for
producing high-resolution outputs from global model forecasts.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generative downscaling over Taiwan using CorrDiff diffusion model.">

.. only:: html

  .. image:: /examples/03_downscaling/images/thumb/sphx_glr_01_corrdiff_inference_thumb.png
    :alt:

  :doc:`/examples/03_downscaling/01_corrdiff_inference`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generative Downscaling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Climate in a Bottle (cBottle) super resolution workflows for global weather.">

.. only:: html

  .. image:: /examples/03_downscaling/images/thumb/sphx_glr_02_cbottle_super_resolution_thumb.png
    :alt:

  :doc:`/examples/03_downscaling/02_cbottle_super_resolution`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CBottle Super Resolution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Custom ensembling workflow with generative downscaling using CorrDiff.">

.. only:: html

  .. image:: /examples/03_downscaling/images/thumb/sphx_glr_03_ensemble_downscaling_thumb.png
    :alt:

  :doc:`/examples/03_downscaling/03_ensemble_downscaling`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ensemble Forecasting with Downscaling</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Nowcasting
----------

Examples demonstrating high-resolution nowcasting and short-range forecasting
with models such as StormCast and StormScope.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic StormCast inference workflow.">

.. only:: html

  .. image:: /examples/04_nowcasting/images/thumb/sphx_glr_01_stormcast_example_thumb.png
    :alt:

  :doc:`/examples/04_nowcasting/01_stormcast_example`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running StormCast Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ensemble StormCast inference workflow.">

.. only:: html

  .. image:: /examples/04_nowcasting/images/thumb/sphx_glr_02_stormcast_ensemble_example_thumb.png
    :alt:

  :doc:`/examples/04_nowcasting/02_stormcast_ensemble_example`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running StormCast Ensemble Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="StormScope inference workflow with GOES satellite imagery and MRMS radar data.">

.. only:: html

  .. image:: /examples/04_nowcasting/images/thumb/sphx_glr_03_stormscope_goes_example_thumb.png
    :alt:

  :doc:`/examples/04_nowcasting/03_stormscope_goes_example`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">StormScope Satellite and Radar Nowcasting</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Data Assimilation
-----------------

Examples demonstrating data assimilation workflows in Earth2Studio.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Running StormCast with guided diffusion posterior sampling to assimilate observations.">

.. only:: html

  .. image:: /examples/05_data_assimilation/images/thumb/sphx_glr_01_stormcast_sda_thumb.png
    :alt:

  :doc:`/examples/05_data_assimilation/01_stormcast_sda`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">StormCast Score-Based Data Assimilation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Producing a global weather analysis from satellite and in-situ observations.">

.. only:: html

  .. image:: /examples/05_data_assimilation/images/thumb/sphx_glr_02_healda_thumb.png
    :alt:

  :doc:`/examples/05_data_assimilation/02_healda`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HealDA Global Data Assimilation</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Subseasonal to Seasonal
-----------------------

Examples demonstrating subseasonal to seasonal (s2s) inference workflows with typical
prediction timescales of two weeks to two years.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple seasonal statistic inference workflow.">

.. only:: html

  .. image:: /examples/06_seasonal/images/thumb/sphx_glr_01_seasonal_statistics_thumb.png
    :alt:

  :doc:`/examples/06_seasonal/01_seasonal_statistics`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Statistical Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic deterministic inference workflow for the DLESyM model.">

.. only:: html

  .. image:: /examples/06_seasonal/images/thumb/sphx_glr_02_dlesym_example_thumb.png
    :alt:

  :doc:`/examples/06_seasonal/02_dlesym_example`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running DLESyM Inference</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Miscellaneous
-------------

Miscellaneous examples covering IO performance, custom data sources, and other
utility workflows.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Setting up distributed manager for parallel inference.">

.. only:: html

  .. image:: /examples/07_misc/images/thumb/sphx_glr_01_distributed_manager_thumb.png
    :alt:

  :doc:`/examples/07_misc/01_distributed_manager`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Distributed Manager Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Climate in a Bottle (cBottle) inference workflows for global weather data synthesis.">

.. only:: html

  .. image:: /examples/07_misc/images/thumb/sphx_glr_02_cbottle_generation_thumb.png
    :alt:

  :doc:`/examples/07_misc/02_cbottle_generation`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CBottle Data Generation and Infilling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Leverage different IO backends for storing inference results.">

.. only:: html

  .. image:: /examples/07_misc/images/thumb/sphx_glr_03_io_performance_thumb.png
    :alt:

  :doc:`/examples/07_misc/03_io_performance`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">IO Backend Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create and save an offline dataset to use in an inference pipeline.">

.. only:: html

  .. image:: /examples/07_misc/images/thumb/sphx_glr_04_local_datasource_thumb.png
    :alt:

  :doc:`/examples/07_misc/04_local_datasource`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Creating a Local Data Source</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Guided tropical cyclone sampling with cBottle and odds-ratio diagnostics.">

.. only:: html

  .. image:: /examples/07_misc/images/thumb/sphx_glr_05_cbottle_tc_guidance_thumb.png
    :alt:

  :doc:`/examples/07_misc/05_cbottle_tc_guidance`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CBottle Tropical Cyclone Guidance</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Extending Earth2Studio
----------------------

Examples focused on demonstrating how to extend Earth2Studio with user-defined
components.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Implementing a custom prognostic model">

.. only:: html

  .. image:: /examples/08_extend/images/thumb/sphx_glr_01_custom_prognostic_thumb.png
    :alt:

  :doc:`/examples/08_extend/01_custom_prognostic`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extending Prognostic Models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Implementing a custom diagnostic model">

.. only:: html

  .. image:: /examples/08_extend/images/thumb/sphx_glr_02_custom_diagnostic_thumb.png
    :alt:

  :doc:`/examples/08_extend/02_custom_diagnostic`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extending Diagnostic Models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Implementing a custom data source">

.. only:: html

  .. image:: /examples/08_extend/images/thumb/sphx_glr_03_custom_datasource_thumb.png
    :alt:

  :doc:`/examples/08_extend/03_custom_datasource`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extending Data Sources</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/01_getting_started/index.rst
   /examples/02_medium_range/index.rst
   /examples/03_downscaling/index.rst
   /examples/04_nowcasting/index.rst
   /examples/05_data_assimilation/index.rst
   /examples/06_seasonal/index.rst
   /examples/07_misc/index.rst
   /examples/08_extend/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: examples_python.zip </examples/examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </examples/examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
